* Majority of buttons made "btn btn-primary" class for consistency. * A little bit of space added between buttons for legibility. * Required asterisks made relative to fix potential scrolling out of container issues.

--- a/src/app/layout/datasets/remote-datasets.modal.component.scss
+++ b/src/app/layout/datasets/remote-datasets.modal.component.scss
@@ -1,7 +1,7 @@
 label.required:after { 
     color: #d00;
     content: "*";
-    position: absolute;
+    position: relative;
     margin-left: 5px;
 }
 
